--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head><title>Charity Aggregator</title>
     <style>
         #demo {
-background: #CE7C6A;
-background: -moz-linear-gradient(-45deg, #CE7C6A 0%, #A4A4A4 50%, #5CC546 100%);
-background: -webkit-linear-gradient(-45deg, #CE7C6A 0%, #A4A4A4 50%, #5CC546 100%);
-background: linear-gradient(135deg, #CE7C6A 0%, #A4A4A4 50%, #5CC546 100%);
-}
+
+background-color: #e5e5f7;
+opacity: 0.7;
+background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 26px ), repeating-linear-gradient( #55a1d755, #55a1d7 );
+
+} 
+
+
+
+
     .heading{
         color:maroon;
         text-align: center;
