--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html>
 <head><title>Charity Aggregator</title>
     <style>
-        #demo {
-
-background-color: #e5e5f7;
-opacity: 0.7;
-background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 26px ), repeating-linear-gradient( #55a1d755, #55a1d7 );
-
-} 
-
-
-
-
     .heading{
         color:maroon;
         text-align: center;
          }
     </style>
 </head>
-<body id="demo";>
+<body style= "background-color: #e5e5f7";
+"opacity: 0.7";
+"background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 26px ), repeating-linear-gradient( #55a1d755, #55a1d7 )";
+ >
     <h1 class="heading";>Charity Aggregator</h1>
     <ol>
         <li><a href="belaku.html";>Belaku Old Age Home</a></li>
